Fix: Fix overflow scroll in ProjectsList and button padding in ProjectCardLong

--- a/frontend/src/pages/home/projects/ProjectsList.scss
+++ b/frontend/src/pages/home/projects/ProjectsList.scss
@@ -5,6 +5,7 @@
     display: flex;
     scroll-snap-type: x mandatory;
     overflow-x: auto;
+    overflow-y: hidden;
     justify-content: center;
     box-sizing: border-box;
     background-clip: content-box; 
