--- a/frontend/src/pages/projects/ProjectCardLong.scss
+++ b/frontend/src/pages/projects/ProjectCardLong.scss
@@ -37,7 +37,7 @@
             display: flex;
             gap: 20px;
             width: 100%;
-            padding: 10px 40px 10px 40px;
+            padding: 7px 40px 10px 40px;
             min-height: 100%;
             box-sizing: border-box;
             height: fit-content;
